--- a/开发文档.md
+++ b/开发文档.md
@@ -178,6 +178,21 @@ dotnet run
   - 控制标签容器宽度，设置最小宽度为80px
   - 将标签整体向右移动10个像素，调整标签在容器中的位置
   - 优化标签文字对齐方式，从居中对齐改为左对齐
+- **v1.1.2**：NBA球队logo选择功能开发尝试与回退，包括：
+  - 尝试实现NBA球队logo选择功能，允许用户在启动程序前选择自己的主队
+  - 创建了TeamSelectionWindow窗口，用于展示和选择NBA球队logo
+  - 实现了从本地文件系统加载球队logo的功能
+  - 开发了基于用户选择设置程序图标的功能
+  - 由于功能实现过程中出现问题，且用户希望优先保证主界面正常显示，最终决定回退此功能
+  - 简化了App.xaml.cs的启动逻辑，直接显示主窗口而不经过球队选择步骤
+  - 保留了TeamSelectionWindow相关文件，以便未来可能重新开发此功能
+- **v1.1.3**：标签系统优化与布局调整，包括：
+  - 修复标签容器圆角显示问题，确保左右对称
+  - 将标签移回内容容器（容器2）内部
+  - 将TabPanel替换为StackPanel，确保标签横向排列
+  - 优化标签样式，未选中状态下无边框，只有在选中或悬停时才显示边框
+  - 恢复无标题栏样式，使用WindowStyle="None"、AllowsTransparency="True"和Background="Transparent"
+  - 重新添加地图切换和常用工具标签页
 
 ## 开发团队
 
