--- a/开发文档.md
+++ b/开发文档.md
@@ -193,6 +193,11 @@ dotnet run
   - 优化标签样式，未选中状态下无边框，只有在选中或悬停时才显示边框
   - 恢复无标题栏样式，使用WindowStyle="None"、AllowsTransparency="True"和Background="Transparent"
   - 重新添加地图切换和常用工具标签页
+- **v1.1.4**：图标配置优化，包括：
+  - 更改应用程序图标配置，使用`icon`文件夹中的`favicon.ico`作为默认图标
+  - 实现了通过替换`icon/favicon.ico`文件来方便更改图标的功能
+  - 确保任务栏和应用程序图标正确显示为篮球图标
+  - 优化了图标加载机制，确保构建过程中正确嵌入图标
 
 ## 开发团队
 
