ui: 添加换肤功能图标和动画效果

--- a/项目概述.md
+++ b/项目概述.md
@@ -73,6 +73,12 @@ FS服装搭配专家v1.0/
 ### 5. 图标管理
 - **自定义图标**：支持通过替换 `icon/favicon.ico` 文件快速更改应用程序图标
 - **任务栏图标**：应用程序在任务栏显示自定义图标
+- **换肤图标**：在标题栏添加了具有流动渐变色效果的换肤图标，点击可直接切换皮肤颜色
+
+### 6. 皮肤系统
+- **直接换肤**：点击标题栏的换肤图标可直接切换应用程序皮肤颜色
+- **流动渐变效果**：换肤图标具有流动的蓝粉紫渐变效果，更加醒目
+- **多皮肤支持**：内置多种皮肤颜色，包括蓝色、粉色、浅蓝色和浅红色
 
 ## 文档导航
 
