docs: 更新项目概述文档，添加动态渐变图标实现技巧

--- a/项目概述.md
+++ b/项目概述.md
@@ -161,7 +161,76 @@ bin\Debug\net10.0-windows\FS服装搭配专家v1.0.exe
 2. **模块化架构**：UI和核心功能分离，便于维护和扩展
 3. **灵活的皮肤系统**：支持自定义皮肤主题
 4. **易于定制的图标**：通过简单替换文件即可更改应用程序图标
-5. **清晰的文档结构**：完善的文档体系，便于团队协作和新开发者快速上手
+5. **动态渐变图标**：实现了带有流动渐变效果的背心图标，使用OpacityMask技术确保渐变只在图标形状上显示
+6. **清晰的文档结构**：完善的文档体系，便于团队协作和新开发者快速上手
+
+## 高级UI技巧：动态渐变图标实现
+
+### 技术原理
+本项目实现了一个带有流动渐变效果的背心图标，使用了以下技术：
+
+1. **LinearGradientBrush**：创建蓝粉紫三色渐变背景
+2. **Storyboard和DoubleAnimation**：实现渐变流动动画效果
+3. **OpacityMask**：使用ImageBrush作为遮罩，确保渐变只在背心形状上显示
+4. **ImageBrush**：使用PNG图像的透明度信息作为遮罩
+
+### 实现代码
+```xaml
+<Button Name="btnSkin" 
+        Width="40" 
+        Height="40" 
+        Click="btnSkin_Click"
+        Background="Transparent"
+        BorderBrush="Transparent"
+        BorderThickness="0"
+        Cursor="Hand"
+        Padding="0"
+        Margin="0">
+    <Grid Width="24" Height="24">
+        <!-- 渐变背景 -->
+        <Border Width="24" Height="24" CornerRadius="4">
+            <Border.Background>
+                <LinearGradientBrush x:Name="IconGradient" StartPoint="-1,-1" EndPoint="2,2">
+                    <GradientStop Color="#FF667EEA" Offset="0" />
+                    <GradientStop Color="#FF6DD5FA" Offset="0.5" />
+                    <GradientStop Color="#FFC58AF9" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+            <!-- 使用ImageBrush作为遮罩，确保只在图片非透明区域显示渐变 -->
+            <Border.OpacityMask>
+                <ImageBrush ImageSource="template/vest-l.png" 
+                           Stretch="Uniform" 
+                           AlignmentX="Center" 
+                           AlignmentY="Center" />
+            </Border.OpacityMask>
+            <Border.Triggers>
+                <EventTrigger RoutedEvent="Border.Loaded">
+                    <BeginStoryboard>
+                        <Storyboard RepeatBehavior="Forever">
+                            <PointAnimation 
+                                Storyboard.TargetName="IconGradient" 
+                                Storyboard.TargetProperty="StartPoint" 
+                                From="-1,-1" To="1,1" 
+                                Duration="0:0:3" />
+                            <PointAnimation 
+                                Storyboard.TargetName="IconGradient" 
+                                Storyboard.TargetProperty="EndPoint" 
+                                From="0,0" To="2,2" 
+                                Duration="0:0:3" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Border.Triggers>
+        </Border>
+    </Grid>
+</Button>
+```
+
+### 关键技术点
+1. **OpacityMask的使用**：通过ImageBrush的透明度信息，只在PNG图像非透明区域显示渐变效果
+2. **动画效果**：使用PointAnimation动画修改渐变的StartPoint和EndPoint，实现流动效果
+3. **性能优化**：移除了重叠的Image控件，减少了渲染开销
+4. **居中对齐**：通过设置ImageBrush的AlignmentX和AlignmentY属性，确保遮罩图像在中心对齐
 
 ## 未来规划
 
