--- a/开发文档.md
+++ b/开发文档.md
@@ -198,6 +198,65 @@ dotnet run
   - 实现了通过替换`icon/favicon.ico`文件来方便更改图标的功能
   - 确保任务栏和应用程序图标正确显示为篮球图标
   - 优化了图标加载机制，确保构建过程中正确嵌入图标
+- **v1.1.5**：启动错误修复与背心渐变效果恢复，包括：
+  - 修复应用程序无法启动的问题，解决了XAML解析错误
+  - 错误原因：MainWindow.xaml文件中背心渐变实现的图片路径配置不正确
+  - 解决方案：将图片路径从pack://格式改为绝对路径引用，确保图片资源能够正确加载
+  - 恢复了原始的动态背心渐变效果，包括蓝紫粉三色渐变和流动动画
+  - 经验总结：在WPF应用程序中使用外部图片资源时，需要注意路径配置的正确性，当pack://格式和相对路径都无法正常工作时，可以尝试使用绝对路径作为临时解决方案
+- **v1.2**：功能迁移与UI布局优化，包括：
+  - 从`D:\py\反编译\FS服装搭配专家v5.3.6`迁移核心功能到当前项目
+  - 优化UI布局，解决左侧文字重叠问题
+  - 调整预览效果位置，确保道具名称在框体上面
+  - 实现搜索功能和加载图片功能
+  - 保留变更和批量变更按钮
+  - 移除表格功能和其他资源包
+
+## 功能迁移计划
+
+### 源程序路径
+
+**源程序：** `D:\py\反编译\FS服装搭配专家v5.3.6`
+
+### 已迁移功能
+
+| 功能名称 | 状态 | 描述 | 实现文件 | 类型 |
+|---------|------|------|----------|------|
+| 搜索功能 | ✅ 已迁移 | 允许用户输入服装名称或代码进行搜索 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 加载图片功能 | ✅ 已迁移 | 加载服装图标图片 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 变更功能 | ✅ 已迁移 | 单个装备变更 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 批量变更功能 | ✅ 已迁移 | 批量装备变更 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 预览功能 | ✅ 已迁移 | 预览服装图片和名称 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 服装数据模型 | ✅ 已迁移 | 管理服装物品信息 | `Core/Models/ItemshopM.cs` | Core |
+| 角色数据模型 | ✅ 已迁移 | 管理角色信息 | `Core/Models/RoleM.cs` | Core |
+| 声音数据模型 | ✅ 已迁移 | 管理声音效果 | `Core/Models/VoiceM.cs` | Core |
+| 通用工具类 | ✅ 已迁移 | 提供各种辅助方法 | `Core/Utilities/conmon.cs` | Core |
+
+### 待迁移功能
+
+| 功能名称 | 状态 | 描述 | 预计实现文件 | 类型 |
+|---------|------|------|--------------|------|
+| 地图切换功能 | ⏳ 待迁移 | 切换游戏地图 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 常用工具功能 | ⏳ 待迁移 | 提供常用工具集合 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 批量操作优化 | ⏳ 待迁移 | 优化批量变更操作流程 | `UI/Windows/MainWindow.xaml.cs` | UI |
+| 配置管理 | ⏳ 待迁移 | 管理应用程序配置 | `Core/Utilities/` | Core |
+
+### 迁移注意事项
+
+1. **线程安全**：确保所有UI操作都在主线程上执行，使用`Dispatcher.Invoke`包装UI操作
+2. **错误处理**：添加适当的错误处理和用户反馈
+3. **性能优化**：对于耗时操作，使用后台线程处理
+4. **代码规范**：保持代码风格一致，添加必要的注释
+5. **兼容性**：确保迁移的功能在当前项目环境中正常工作
+
+## 后续开发计划
+
+1. **完成功能迁移**：按照上述计划迁移剩余功能
+2. **测试与调试**：确保所有功能正常工作
+3. **性能优化**：优化应用程序性能，减少内存使用
+4. **用户体验改进**：进一步优化UI布局和交互体验
+5. **文档完善**：更新开发文档和用户文档
+6. **发布版本**：准备发布稳定版本
 
 ## 开发团队
 
