--- a/项目概述.md
+++ b/项目概述.md
@@ -62,13 +62,23 @@ FS服装搭配专家v1.0/
 - **柔和渐变背景**：使用蓝粉紫渐变背景，提升视觉层次感
 - **自定义皮肤**：支持切换不同的皮肤主题
 
-### 3. 数据管理
-- **服装数据**：管理服装物品信息
-- **角色数据**：管理角色信息
-- **声音数据**：管理声音效果
+### 3. 核心功能（Core）
+- **数据模型**：
+  - `ItemshopM.cs`：服装数据模型，管理服装物品信息
+  - `RoleM.cs`：角色数据模型，管理角色信息
+  - `VoiceM.cs`：声音数据模型，管理声音效果
+- **业务逻辑服务**：
+  - `SkinManager.cs`：皮肤管理系统，处理皮肤切换和应用
+- **通用工具类**：
+  - `conmon.cs`：通用工具类，提供各种辅助方法
+  - `OperationDebugger.cs`：操作调试器，用于调试和日志记录
 
-### 4. 预览功能
-- **服装预览**：在右侧预览区域显示选中的服装效果
+### 4. UI功能
+- **搜索功能**：允许用户输入服装名称或代码进行搜索
+- **加载图片功能**：加载服装图标图片
+- **变更功能**：单个装备变更
+- **批量变更功能**：批量装备变更
+- **预览功能**：在右侧预览区域显示选中的服装效果和名称
 
 ### 5. 图标管理
 - **自定义图标**：支持通过替换 `icon/favicon.ico` 文件快速更改应用程序图标
@@ -79,6 +89,38 @@ FS服装搭配专家v1.0/
 - **直接换肤**：点击标题栏的换肤图标可直接切换应用程序皮肤颜色
 - **流动渐变效果**：换肤图标具有流动的蓝粉紫渐变效果，更加醒目
 - **多皮肤支持**：内置多种皮肤颜色，包括蓝色、粉色、浅蓝色和浅红色
+
+### 7. 功能迁移
+- **从FS服装搭配专家v5.3.6迁移**：已从 `D:\py\反编译\FS服装搭配专家v5.3.6` 迁移核心功能到当前项目
+- **UI布局优化**：解决左侧文字重叠问题，调整预览效果位置，确保道具名称在框体上面
+
+## 功能迁移计划
+
+### 源程序路径
+**源程序：** `D:\py\反编译\FS服装搭配专家v5.3.6`
+
+### 已迁移功能
+
+| 功能名称 | 状态 | 描述 | 实现文件 | 类型 |
+|---------|------|------|----------|------|
+| 搜索功能 | ✅ 已迁移 | 允许用户输入服装名称或代码进行搜索 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 加载图片功能 | ✅ 已迁移 | 加载服装图标图片 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 变更功能 | ✅ 已迁移 | 单个装备变更 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 批量变更功能 | ✅ 已迁移 | 批量装备变更 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 预览功能 | ✅ 已迁移 | 预览服装图片和名称 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 服装数据模型 | ✅ 已迁移 | 管理服装物品信息 | `Core/Models/ItemshopM.cs` | Core |
+| 角色数据模型 | ✅ 已迁移 | 管理角色信息 | `Core/Models/RoleM.cs` | Core |
+| 声音数据模型 | ✅ 已迁移 | 管理声音效果 | `Core/Models/VoiceM.cs` | Core |
+| 通用工具类 | ✅ 已迁移 | 提供各种辅助方法 | `Core/Utilities/conmon.cs` | Core |
+
+### 待迁移功能
+
+| 功能名称 | 状态 | 描述 | 预计实现文件 | 类型 |
+|---------|------|------|--------------|------|
+| 地图切换功能 | ⏳ 待迁移 | 切换游戏地图 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 常用工具功能 | ⏳ 待迁移 | 提供常用工具集合 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
+| 批量操作优化 | ⏳ 待迁移 | 优化批量变更操作流程 | `UI/Windows/MainWindow.xaml.cs` | UI |
+| 配置管理 | ⏳ 待迁移 | 管理应用程序配置 | `Core/Utilities/` | Core |
 
 ## 文档导航
 
