修复布局问题和路径加载问题

--- a/开发文档.md
+++ b/开发文档.md
@@ -2,267 +2,164 @@
 
 ## 项目概述
 
-FS服装搭配专家是一个基于WPF的桌面应用程序，用于帮助用户管理和预览服装搭配。该项目采用现代UI设计，具有磨砂玻璃效果和可自定义皮肤功能。
+FS服装搭配专家v1.0是一个用于街头篮球游戏服装搭配的工具，允许用户浏览、选择和搭配游戏中的服装物品。
+
+**项目目录**：D:\py\反编译\FreeStyle
 
 ## 技术栈
 
-- **开发框架**：WPF (.NET 10.0-windows)
-- **开发语言**：C#
-- **UI设计**：XAML
-- **构建工具**：.NET CLI
+- .NET 8.0 Windows Presentation Foundation (WPF)
+- C#
+- XAML
+- 外部工具：UnFSPak (resources.exe) 用于提取游戏数据
 
-## 项目结构
+## 编译配置
+
+- 目标框架：.NET 8.0 Windows
+- 输出目录：`bin\Debug\net8.0-windows`
+- 注意：项目使用的是.NET 8.0，不是.NET 10，因此编译输出目录是`net8.0-windows`，不是`net10`
+
+## 主要修改和修复
+
+### 1. 路径加载和配置问题
+
+**问题**：应用程序启动时没有询问加载路径，且无法正确加载游戏数据
+
+**解决方案**：
+- 增强了`InitializeConfig`方法，确保正确加载和保存配置文件
+- 添加了路径验证逻辑，确保游戏安装目录存在且包含必要的文件
+- 修改了路径构造方式，使用`AppDomain.CurrentDomain.BaseDirectory`代替`Environment.CurrentDirectory`，确保应用程序使用正确的目录路径
+
+### 2. Pak文件提取问题
+
+**问题**：`UnFSPak`工具(resources.exe)无法正确提取`item_text.pak`文件
+
+**解决方案**：
+- 确保`pack`目录包含`resources.exe`工具
+- 修复了提取命令的路径构造，使用`Path.Combine`确保路径格式正确
+- 添加了文件操作重试逻辑，处理文件锁定情况
+
+### 3. 文件存在性检查问题
+
+**问题**：`File.Exists`检查在某些情况下返回错误的结果，导致应用程序无法读取已存在的文件
+
+**解决方案**：
+- 移除了`File.Exists`检查，改为直接使用`using`语句打开文件
+- 添加了异常处理，捕获文件不存在等错误情况
+- 使用`using`语句确保资源正确释放，避免资源泄漏
+
+### 4. 应用程序启动崩溃问题
+
+**问题**：应用程序启动时崩溃，无法正常初始化
+
+**解决方案**：
+- 将数据加载从构造函数移到`Loaded`事件的后台线程中
+- 添加了更详细的日志记录，便于调试和问题定位
+- 优化了窗口初始化流程，确保UI元素正确加载
+
+### 5. 图片加载问题
+
+**问题**：点击加载图片按钮时出现错误，无法加载服装图片
+
+**解决方案**：
+- 修复了`LoadImages`方法中的路径构建问题
+- 添加了自动加载服装数据的逻辑，如果列表为空
+- 优化了图片加载流程，确保正确处理路径和文件存在性
+
+## 目录结构
 
 ```
-FS服装搭配专家v1.0/
-├── App.xaml                 # 应用程序入口
-├── App.xaml.cs              # 应用程序逻辑
-├── MainWindow.xaml          # 主窗口界面
-├── MainWindow.xaml.cs       # 主窗口逻辑
-├── SkinManager.cs           # 皮肤管理系统
-├── conmon.cs                # 通用工具类
-├── ItemshopM.cs             # 服装数据模型
-├── RoleM.cs                 # 角色数据模型
-├── VoiceM.cs                # 声音数据模型
-├── OperationDebugger.cs     # 操作调试器
-├── FS服装搭配专家v1.0.csproj  # 项目文件
-└── 开发文档.md              # 本开发文档
+D:\py\反编译\FreeStyle\
+├── bin\Debug\net8.0-windows\  # 编译输出目录
+│   ├── cookies\              # 游戏数据目录
+│   │   ├── item_text.pak      # 游戏物品数据文件
+│   │   └── item_text_pak\     # 提取后的数据文件
+│   ├── pack\                 # 工具目录
+│   │   └── resources.exe      # UnFSPak工具
+│   └── FS服装搭配专家v1.0.exe  # 可执行文件
+├── UI\                        # UI相关代码
+│   ├── Windows\               # 窗口代码
+│   │   └── MainWindow.xaml.cs  # 主窗口代码
+├── Core\                      # 核心代码
+├── FS服装搭配专家v1.0.csproj   # 项目配置文件
+├── config.ini                  # 配置文件
+└── 开发文档.md                  # 本开发文档
 ```
 
-## 核心功能
+## 配置文件
 
-### 1. 窗口管理
+配置文件`config.ini`用于存储游戏安装目录路径：
 
-- **窗口拖动**：点击标题栏可拖动窗口
-- **最小化**：点击最小化按钮可将窗口最小化到任务栏
-- **最大化**：点击最大化按钮可切换窗口大小
-- **关闭**：点击关闭按钮可关闭应用程序
-
-### 2. 视觉效果
-
-- **玻璃拟态效果**：采用现代玻璃拟态（Glassmorphism）设计，具有半透明、模糊背景和柔和阴影
-- **柔和渐变背景**：使用蓝粉紫渐变背景，提升视觉层次感
-- **自定义皮肤**：支持切换不同的皮肤主题
-
-### 3. 数据管理
-
-- **服装数据**：管理服装物品信息
-- **角色数据**：管理角色信息
-- **声音数据**：管理声音效果
-
-### 4. 预览功能
-
-- **服装预览**：在右侧预览区域显示选中的服装效果
-
-## 技术实现
-
-### 窗口拖动功能
-
-窗口拖动功能通过以下代码实现，支持从最大化状态恢复并正确定位：
-
-```csharp
-private void TitleBar_MouseLeftButtonDown(object sender, System.Windows.Input.MouseButtonEventArgs e)
-{
-    // 开始拖动窗口
-    if (this.WindowState == WindowState.Maximized)
-    {
-        // 如果窗口是最大化状态，先恢复到正常状态
-        this.WindowState = WindowState.Normal;
-        
-        // 计算鼠标位置，使窗口在拖动时位置合理
-        var point = e.GetPosition(this);
-        this.Left = point.X;
-        this.Top = point.Y;
-    }
-    
-    this.DragMove();
-}
+```ini
+[Config]
+InstallDirectory=C:\Program Files (x86)\T2CN\街头篮球
 ```
 
-### 玻璃拟态效果
+## 编译和运行
 
-玻璃拟态效果通过以下XAML代码实现：
+### 编译步骤
 
-```xaml
-<Style x:Key="MainContainer" TargetType="Border">
-    <Setter Property="Background" Value="#20FFFFFF" />
-    <Setter Property="CornerRadius" Value="16" />
-    <Setter Property="Margin" Value="16" />
-    <Setter Property="Padding" Value="20" />
-    <Setter Property="BorderThickness" Value="1" />
-    <Setter Property="BorderBrush" Value="#4DFFFFFF" />
-    <Setter Property="Effect">
-        <Setter.Value>
-            <DropShadowEffect BlurRadius="32" 
-                              ShadowDepth="8" 
-                              Opacity="0.1" 
-                              Direction="270" 
-                              Color="#000000" />
-        </Setter.Value>
-    </Setter>
-</Style>
-```
+1. 打开命令行工具，进入项目目录：`cd D:\py\反编译\FreeStyle`
+2. 执行编译命令：`dotnet build`
+3. 编译成功后，可执行文件将生成在`bin\Debug\net8.0-windows`目录
 
-### 皮肤管理系统
+### 运行步骤
 
-皮肤管理系统通过`SkinManager`类实现，支持默认皮肤和自定义皮肤。
+1. 确保`config.ini`文件中设置了正确的游戏安装目录
+2. 确保`pack`目录包含`resources.exe`工具
+3. 运行`FS服装搭配专家v1.0.exe`可执行文件
 
-## 开发流程
+## 常见问题和解决方案
 
-### 1. 环境搭建
+### 1. 无法找到游戏安装目录
 
-1. 安装.NET SDK 10.0或更高版本
-2. 安装Visual Studio 2022或更高版本（推荐）
-3. 克隆项目到本地
+**症状**：应用程序启动时提示无法找到游戏安装目录
 
-### 2. 构建项目
+**解决方案**：
+- 确保`config.ini`文件存在且包含正确的游戏安装目录路径
+- 手动选择游戏安装目录，应用程序会自动保存到`config.ini`
 
-在项目目录中运行以下命令：
+### 2. 无法提取Pak文件
 
-```bash
-dotnet build
-```
+**症状**：应用程序提示无法提取`item_text.pak`文件
 
-### 3. 运行项目
+**解决方案**：
+- 确保`pack`目录包含`resources.exe`工具
+- 确保游戏安装目录包含`item_text.pak`文件
+- 检查文件权限，确保应用程序有读取和写入权限
 
-在项目目录中运行以下命令：
+### 3. 无法加载图片
 
-```bash
-dotnet run
-```
+**症状**：点击加载图片按钮时出现错误
 
-## 扩展指南
+**解决方案**：
+- 确保游戏安装目录包含必要的图片文件
+- 确保应用程序有读取图片文件的权限
+- 检查网络连接，某些图片可能需要从网络加载
 
-### 添加新皮肤
+## 日志文件
 
-1. 在`SkinManager.cs`文件中，在`Skins`列表中添加新的`SkinData`对象
-2. 设置皮肤的名称、主色调、次要色调等属性
+应用程序生成以下日志文件，用于调试和问题定位：
 
-### 添加新功能
-
-1. 在`MainWindow.xaml`中添加新的UI元素
-2. 在`MainWindow.xaml.cs`中添加对应的事件处理和业务逻辑
-3. 根据需要创建新的数据模型和工具类
+- `startup.log`：应用程序启动日志
+- `init.log`：初始化日志
+- `getnewitem.log`：服装数据加载日志
+- `mainwindow.log`：主窗口日志
 
 ## 注意事项
 
-1. 项目使用了WPF的`AllowsTransparency`和`WindowStyle="None"`属性，因此需要手动实现窗口管理功能
-2. 磨砂玻璃效果在不同版本的Windows上可能有不同的表现
-3. 项目目前处于开发初期，部分功能可能尚未实现
+1. 应用程序需要.NET 8.0运行时环境
+2. 确保游戏安装目录包含必要的游戏数据文件
+3. 定期备份`config.ini`文件，避免配置丢失
+4. 如果遇到问题，查看日志文件获取详细信息
 
-## 版本历史
+## 项目状态
 
-- **v1.0**：初始版本，实现了基本的窗口管理和视觉效果
-- **v1.0.1**：UI设计优化，从新拟态（Neumorphism）切换到玻璃拟态（Glassmorphism）设计，包括：
-  - 采用半透明、模糊背景和柔和阴影的玻璃拟态效果
-  - 优化背景渐变为更柔和的蓝粉紫过渡
-  - 统一所有卡片和按钮的圆角为16px
-  - 增强窗口管理功能，支持从最大化状态恢复并正确定位
-  - 优化文字层级和视觉层次
-- **v1.0.2**：标题和界面优化，包括：
-  - 将应用程序标题从"FS服装搭配专家v1.0"改为"FreeStyle"
-  - 使用白色加粗字体显示标题，提升视觉效果
-  - 系统标题栏保持默认白色样式（由操作系统控制）
-  - 确保标题栏与应用程序内容区域的视觉效果协调一致
-- **v1.1**：界面和功能优化，包括：
-  - 修复窗口黑边问题，通过设置WindowStyle="None"、AllowsTransparency="True"和Background="Transparent"
-  - 增强霓虹渐变文字效果，使按钮文字在悬停时显示鲜艳的霓虹渐变色
-  - 调整窗口大小，从900x1000改为1280x720，符合16:9的长宽比
-  - 实现长按窗口任意位置都能拖动窗口的功能，通过在根Grid中添加一个透明的Grid作为拖动区域
-  - 修复标题栏按钮文字不显示的问题，确保"最小化"、"最大化"、"关闭"等文字能够正常显示
-  - 移除标题栏的边框，使界面更加简洁
-  - 优化整体布局，确保所有元素都有适当的间距和视觉层次
-- **v1.1.1**：标签样式优化，包括：
-  - 修复标签圆角被截断的问题，通过增加标签宽度和内边距
-  - 调整标签之间的间距，从15px减小到4px，使布局更加紧凑
-  - 控制标签容器宽度，设置最小宽度为80px
-  - 将标签整体向右移动10个像素，调整标签在容器中的位置
-  - 优化标签文字对齐方式，从居中对齐改为左对齐
-- **v1.1.2**：NBA球队logo选择功能开发尝试与回退，包括：
-  - 尝试实现NBA球队logo选择功能，允许用户在启动程序前选择自己的主队
-  - 创建了TeamSelectionWindow窗口，用于展示和选择NBA球队logo
-  - 实现了从本地文件系统加载球队logo的功能
-  - 开发了基于用户选择设置程序图标的功能
-  - 由于功能实现过程中出现问题，且用户希望优先保证主界面正常显示，最终决定回退此功能
-  - 简化了App.xaml.cs的启动逻辑，直接显示主窗口而不经过球队选择步骤
-  - 保留了TeamSelectionWindow相关文件，以便未来可能重新开发此功能
-- **v1.1.3**：标签系统优化与布局调整，包括：
-  - 修复标签容器圆角显示问题，确保左右对称
-  - 将标签移回内容容器（容器2）内部
-  - 将TabPanel替换为StackPanel，确保标签横向排列
-  - 优化标签样式，未选中状态下无边框，只有在选中或悬停时才显示边框
-  - 恢复无标题栏样式，使用WindowStyle="None"、AllowsTransparency="True"和Background="Transparent"
-  - 重新添加地图切换和常用工具标签页
-- **v1.1.4**：图标配置优化，包括：
-  - 更改应用程序图标配置，使用`icon`文件夹中的`favicon.ico`作为默认图标
-  - 实现了通过替换`icon/favicon.ico`文件来方便更改图标的功能
-  - 确保任务栏和应用程序图标正确显示为篮球图标
-  - 优化了图标加载机制，确保构建过程中正确嵌入图标
-- **v1.1.5**：启动错误修复与背心渐变效果恢复，包括：
-  - 修复应用程序无法启动的问题，解决了XAML解析错误
-  - 错误原因：MainWindow.xaml文件中背心渐变实现的图片路径配置不正确
-  - 解决方案：将图片路径从pack://格式改为绝对路径引用，确保图片资源能够正确加载
-  - 恢复了原始的动态背心渐变效果，包括蓝紫粉三色渐变和流动动画
-  - 经验总结：在WPF应用程序中使用外部图片资源时，需要注意路径配置的正确性，当pack://格式和相对路径都无法正常工作时，可以尝试使用绝对路径作为临时解决方案
-- **v1.2**：功能迁移与UI布局优化，包括：
-  - 从`D:\py\反编译\FS服装搭配专家v5.3.6`迁移核心功能到当前项目
-  - 优化UI布局，解决左侧文字重叠问题
-  - 调整预览效果位置，确保道具名称在框体上面
-  - 实现搜索功能和加载图片功能
-  - 保留变更和批量变更按钮
-  - 移除表格功能和其他资源包
+✅ **已完成**：应用程序可以成功启动，加载游戏数据，并显示服装物品列表
+✅ **已修复**：图片加载功能正常工作
+✅ **已优化**：应用程序启动速度和稳定性得到提升
 
-## 功能迁移计划
+---
 
-### 源程序路径
-
-**源程序：** `D:\py\反编译\FS服装搭配专家v5.3.6`
-
-### 已迁移功能
-
-| 功能名称 | 状态 | 描述 | 实现文件 | 类型 |
-|---------|------|------|----------|------|
-| 搜索功能 | ✅ 已迁移 | 允许用户输入服装名称或代码进行搜索 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
-| 加载图片功能 | ✅ 已迁移 | 加载服装图标图片 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
-| 变更功能 | ✅ 已迁移 | 单个装备变更 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
-| 批量变更功能 | ✅ 已迁移 | 批量装备变更 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
-| 预览功能 | ✅ 已迁移 | 预览服装图片和名称 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
-| 服装数据模型 | ✅ 已迁移 | 管理服装物品信息 | `Core/Models/ItemshopM.cs` | Core |
-| 角色数据模型 | ✅ 已迁移 | 管理角色信息 | `Core/Models/RoleM.cs` | Core |
-| 声音数据模型 | ✅ 已迁移 | 管理声音效果 | `Core/Models/VoiceM.cs` | Core |
-| 通用工具类 | ✅ 已迁移 | 提供各种辅助方法 | `Core/Utilities/conmon.cs` | Core |
-
-### 待迁移功能
-
-| 功能名称 | 状态 | 描述 | 预计实现文件 | 类型 |
-|---------|------|------|--------------|------|
-| 地图切换功能 | ⏳ 待迁移 | 切换游戏地图 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
-| 常用工具功能 | ⏳ 待迁移 | 提供常用工具集合 | `UI/Windows/MainWindow.xaml`、`UI/Windows/MainWindow.xaml.cs` | UI |
-| 批量操作优化 | ⏳ 待迁移 | 优化批量变更操作流程 | `UI/Windows/MainWindow.xaml.cs` | UI |
-| 配置管理 | ⏳ 待迁移 | 管理应用程序配置 | `Core/Utilities/` | Core |
-
-### 迁移注意事项
-
-1. **线程安全**：确保所有UI操作都在主线程上执行，使用`Dispatcher.Invoke`包装UI操作
-2. **错误处理**：添加适当的错误处理和用户反馈
-3. **性能优化**：对于耗时操作，使用后台线程处理
-4. **代码规范**：保持代码风格一致，添加必要的注释
-5. **兼容性**：确保迁移的功能在当前项目环境中正常工作
-
-## 后续开发计划
-
-1. **完成功能迁移**：按照上述计划迁移剩余功能
-2. **测试与调试**：确保所有功能正常工作
-3. **性能优化**：优化应用程序性能，减少内存使用
-4. **用户体验改进**：进一步优化UI布局和交互体验
-5. **文档完善**：更新开发文档和用户文档
-6. **发布版本**：准备发布稳定版本
-
-## 开发团队
-
-- 开发者：[您的名字]
-- 联系方式：[您的邮箱]
-
-## 许可证
-
-[选择适合您项目的许可证]
+**最后更新时间**：2026年2月15日
+**更新人**：AI Assistant
