更新：性能优化和窗口大小调整

--- a/更新文档.md
+++ b/更新文档.md
@@ -2,6 +2,25 @@
 
 ## 更新内容
 
+### 2026-02-15 性能优化和窗口大小调整
+
+1. **加载性能优化**
+   - 移除了大量日志记录代码，减少I/O操作，提高加载速度
+   - 优化了文件操作和重试逻辑，减少等待时间
+   - 实现了静默加载，移除了加载提示，提高了用户体验
+
+2. **窗口大小调整**
+   - 修改了 `MainWindow.xaml` 文件，将窗口大小从1400x720改为1440x1080
+   - 修改了 `MainWindow.xaml.cs` 文件，将构造函数中的窗口大小从1440x968改为1440x1080
+   - 重新编译了项目，但窗口大小修改仍然未生效
+   - **待解决**：窗口大小设置问题需要进一步调查
+
+3. **布局修复**
+   - 移除了被下方容器遮挡的窗口控制按钮，解决了布局问题
+
+4. **编译配置**
+   - 确认项目使用的是.NET 8.0，不是.NET 10，因此编译输出目录是`net8.0-windows`
+
 ### 2026-02-13 图标更新
 
 1. **图标配置优化**
